# arduino-liblame

./: CMakeLists.txt  README.md
.github/workflows/: ubuntu.yml
docs/html/: _m_p3_encoder_l_a_m_e_8h_source.html  annotated.html  classes.html  classliblame_1_1_m_p3_encoder_l_a_m_e-members.html  classliblame_1_1_m_p3_encoder_l_a_m_e.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  index.html  jquery.js  lame_8h.html  lame_8h_source.html  lame__log_8h.html  lame__log_8h_source.html  structliblame_1_1_audio_info-members.html  structliblame_1_1_audio_info.html
docs/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  classes_0.js  classes_1.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  pages_0.js
examples/encode/: CMakeLists.txt  encode.ino
examples/esp32_test/: esp32_test.ino  lame_test.c  lame_test.h
examples/speed_test/: CMakeLists.txt  speed_test.ino
src/: MP3EncoderLAME.h  arduino-liblame.code-workspace  etc.cpp  float32.h  heap.cpp  heap.h  lame.h  lame_log.h  stackhack.cpp
src/liblame/: VbrTag.c  VbrTag.h  bitstream.c  config.h  encoder.c  fft.c  gain_analysis.c  gain_analysis.cpp  gain_analysis.h  id3tag.c  id3tag.h  lame.c  lame.cpp  lame.h  log.c  log.cpp  log.h  machine.h  mpglib_interface.c  psymodel.c  psymodel.cpp  quantize.c  quantize.cpp  quantize_pvt.cpp  quantize_pvt.h  stackhack.h  tables.h  takehiro.c  takehiro.cpp  util.c  util.h  vbrquantize.c  vbrquantize.cpp
src/liblame/vector/: xmm_quantize_sub.c
